@@ -4,7 +4,7 @@
 %BOOK_ENTITIES;
 ]>
 <section conformance="202" id="sect-Publican-Users_Guide-Preparing_a_document_for_translation">
-	<title>Preparing a document for translation</title>
+	<title>Translating a document</title>
 	 <para>
 		Support for localization of documents was a key consideration in the design of <application>Publican</application>. The general translation workflow for documents developed in <application>Publican</application> is as follows:
 	</para>
@@ -18,11 +18,20 @@
 			</para>
 
 		</step>
+		<step>
+			<para>
+				Optional but recommended: <firstterm>drop</firstterm> the document to translation. Run:
+			</para>
+<screen><prompt>$</prompt> <command>publican trans_drop</command></screen>
+			<para>
+				<application>Publican</application> creates a new subdirectory, named <filename>trans_drop/</filename>. The <filename>trans_drop/</filename> subdirectory contains a snapshot of the source files of the document. When the <filename>trans_drop/</filename> directory is present in a documentation project, <application>Publican</application> uses its content as the basis for the commands documented later in this procedure. 
+			</para>
+
+		</step>
 		 <step>
 			<para>
 				Generate <firstterm>portable object template</firstterm> (POT) files from the XML files:
 			</para>
-			 
 <screen><prompt>$</prompt> <command>publican update_pot</command></screen>
 			 <para>
 				If this is the first time that POT files have been created for this document, <application>Publican</application> creates a new subdirectory, named <filename>pot</filename>. The <filename>pot</filename> subdirectory holds a POT file for each XML file in the document. If <application>Publican</application> has created POT files for this document previously, <application>Publican</application> updates the existing POT files to reflect any changes in the XML since the POT files were last updated.
@@ -51,7 +60,10 @@
 			 
 <screen><prompt>$</prompt> <command>publican update_po --langs=hi-IN,pt-BR,ru-RU,zh-CN</command></screen>
 			 <para>
-				If this is the first time that PO files have been created for a particular language, <application>Publican</application> creates a new subdirectory, named with the language code that you specified with the <option>--langs=</option> option. This subdirectory holds a PO file for each POT file in <filename>pot</filename> subdirectory. If <application>Publican</application> has created PO files for this language previously, <application>Publican</application> updates the existing PO files to reflect any changes in the POT files since the PO files were last updated. You can update existing PO files in every subdirectory with the <option>--langs=all</option> option:
+				 If this is the first time that PO files have been created for a particular language, <application>Publican</application> creates a new subdirectory, named with the language code that you specified with the <option>--langs=</option> option. This subdirectory holds a PO file for each POT file in <filename>pot</filename> subdirectory, plus a <filename>Revision_History.xml</filename> file that tracks the history of this particular translation. When created for the first time, the <filename>Revision_History.xml</filename> file records the date on which the PO files for this translation were created, and the version of the source language XML (taken from the source language's <filename>Revision_History.xml</filename> file) on which this translation is therefore based. 
+			</para>
+			<para>
+				If <application>Publican</application> has created PO files for this language previously, <application>Publican</application> updates the existing PO files to reflect any changes in the POT files since the PO files were last updated, and adds a new entry to the translation's <filename>Revision_History.xml</filename> file to record the date on which the PO files for this translation were refreshed, and the version of the source language XML on which the revision is  based. You can update existing PO files in every subdirectory with the <option>--langs=all</option> option:
 			</para>
 			 
 <screen><prompt>$</prompt> <command>publican update_po --langs=all</command></screen>
@@ -69,7 +81,16 @@
 		</step>
 		 <step>
 			<para>
-				Translators translate the <firstterm>strings</firstterm> contained in the PO files.
+				Translate the <firstterm>strings</firstterm> contained in the PO files.
+			</para>
+
+		</step>
+		 <step>
+			<para>
+				If you are updating a previously published translation <emphasis>of this revision in the source language</emphasis>, use <application>Publican</application>'s <command>publican add_revision</command> command to describe your changes or corrections. <application>Publican</application> updates the <filename>Revision_History.xml</filename> file for you. 
+			</para>
+			<para>
+				If the document has changed in its original language, use the <command>publican trans_drop</command>, <command>publican update_pot</command>, and <command>publican update_po</command> commands as described earlier in this procedure instead. 
 			</para>
 
 		</step>
@@ -87,18 +108,6 @@
 			 <para>
 				You can build the document in all languages for which you have translations with the <option>--langs=all</option> option, but note that you must package each language individually. Refer to <xref linkend="sect-Publican-Users_Guide-Building_a_document" /> for more information on building a document, and <xref linkend="sect-Publican-Users_Guide-Packaging_a_document" /> on packaging a document.
 			</para>
-			 <important>
-				<title>Important — set Project-Id-Version for packaging</title>
-				 <para>
-					The release number of RPM packages for translated documents is set by the <parameter>Project-Id-Version</parameter> parameter in the <filename>Article_Info.po</filename> or <filename>Book_Info.po</filename> file. For example, release <literal>3</literal> of a book in Japanese would have the following set at the start of the <filename>ja-JP/Book_Info.po</filename> file:
-				</para>
-				
-<programlisting>"Project-Id-Version: 3\n"</programlisting>
-				 <para>
-					Note that the release number of a package in a particular language does not bear any relationship to the release number of the package for the same document in its original language or in any other language. The release number is specific to one particular language only.
-				</para>
-
-			</important>
 
 		</step>
 
@@ -111,6 +120,20 @@
 		</para>
 
 	</section>
+<!--	<section id="sect-Publican-Users_Guide-Preparing_a_document_for_translation-Translating_Glossaries">
+		<title>Translating Indexes and Glossaries</title>
+		 <para>
+			 DocBook automatically collates and sorts <sgmltag>&lt;glossentry&gt;</sgmltag> elements into a book's glossary; and <sgmltag>&lt;primary&gt;</sgmltag>, <sgmltag>&lt;secondary&gt;</sgmltag>, and <sgmltag>&lt;tertiary&gt;</sgmltag> <sgmltag>&lt;indexterm&gt;</sgmltag> elements into a book's index. Entries are sorted automatically, and although this system works well for languages written with an alphabet, abugida, or syllabic script, languages written with logograms sort less well.  
+		</para>
+		<para>
+			To manually adjust the sort order of a glossary entry or index entry, use DocBook's <sgmltag>sortas</sgmltag> attribute. For example, to ensure that the Japanese word 暗号化 sorts correctly, you could specify:
+		</para>
+<programlisting>#. Tag: indexterm
+#, no-c-format
+msgid "&lt;primary&gt;encryption&lt;/primary&gt;"
+msgstr "&lt;primary sortas="あんごうか"&gt;暗号化&lt;/primary&gt;"</programlisting>
+
+	</section> -->
 	
 
 </section>
