@@ -7,7 +7,23 @@
 	<title>Revision History</title>
 	 <simpara>
 		<revhistory>
-			
+			<revision>
+				<revnumber>4.0-4</revnumber>
+				 <date>Mon Nov 18 2013</date>
+				 <author>
+					<firstname>Rüdiger</firstname>
+					 <surname>Landmann</surname>
+					 <email>r.landmann@redhat.com</email>
+
+				</author>
+				 <revdescription>
+					<simplelist>
+						<member>Improve instructions for translation BZ#1021287</member>
+					</simplelist>
+
+				</revdescription>
+
+			</revision>
 			<revision>
 				<revnumber>4.0-3</revnumber>
 				 <date>Thu Nov 14 2013</date>
