@@ -53,6 +53,7 @@ NEXT UNRELEASED
 - Correct OpenSUSE installation instructions. BZ #1000534
 - Add Docker installation instructions. BZ #1015943
 - Clarify where relative paths are used in brand instructions  - BZ#1028815
+- Update and clarify translation instructions BZ#1021287 
 
 3.2.1 Wed Sep 04 2013
 - Fix empty images dir causing packaging fail. BZ #995896
